minor style fixes: spacing of lines

--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-	margin: 10px 20px;
+	margin: 10px 20px 0;
+	line-height: 1.4em;
 }
 
 h1 {
